# RNTrack-smapi -*Automake*-
# $Id$

noinst_LIBRARIES	= libsmapi.a
libsmapi_a_SOURCES = 1stchar.c api_jam.c api_sdm.c cvtdate.c date2bin.c dosdate.c fexist.c \
		ffind.c flush.c genmsgid.c gnmsgid.c locking.c months.c msgapi.c parsenn.c \
		patmat.c qksort.c setfsize.c sq_area.c sq_hash.c sq_help.c sq_idx.c sq_kill.c \
		sq_lock.c sq_misc.c sq_msg.c sq_read.c sq_uid.c sq_write.c strextra.c strftim.c \
		strocpy.c structrw.c tdelay.c trail.c weekday.c
